# cardano-ledger-specs

./: cabal.project
alonzo/impl/src/Cardano/Ledger/Alonzo/: Scripts.hs
cardano-ledger-test/src/Test/Cardano/Ledger/: DependGraph.hs  Elaborators.hs  ModelChain.hs
cardano-ledger-test/src/Test/Cardano/Ledger/Elaborators/: Alonzo.hs  Shelley.hs
cardano-ledger-test/src/Test/Cardano/Ledger/ModelChain/: FeatureSet.hs  Properties.hs  Script.hs  Utils.hs  Value.hs
eras/alonzo/impl/: cardano-ledger-alonzo.cabal
eras/alonzo/impl/src/Cardano/Ledger/: Alonzo.hs
eras/alonzo/impl/src/Cardano/Ledger/Alonzo/: Translation.hs  TxBody.hs
eras/alonzo/impl/src/Cardano/Ledger/Alonzo/Rules/: Ledger.hs  Utxo.hs  Utxos.hs  Utxow.hs
eras/shelley-ma/impl/src/Cardano/Ledger/: Allegra.hs  Mary.hs
eras/shelley-ma/impl/src/Cardano/Ledger/ShelleyMA/Rules/: Utxo.hs
eras/shelley/impl/src/Cardano/Ledger/Shelley/: EpochBoundary.hs  LedgerState.hs
eras/shelley/impl/src/Cardano/Ledger/Shelley/API/: ByronTranslation.hs  Genesis.hs  Types.hs  Wallet.hs
eras/shelley/impl/src/Cardano/Ledger/Shelley/Rules/: Ledger.hs  Snap.hs  Utxo.hs  Utxow.hs
eras/shelley/test-suite/src/Test/Cardano/Ledger/Shelley/: BenchmarkFunctions.hs
eras/shelley/test-suite/test/Test/Cardano/Ledger/Shelley/: MultiSigExamples.hs  UnitTests.hs
libs/cardano-ledger-pretty/src/Cardano/Ledger/: Pretty.hs
libs/cardano-rewards/: cardano-rewards.cabal
libs/cardano-rewards/src/Cardano/: Rewards.hs
libs/small-steps-test/src/Control/State/Transition/: Trace.hs
(+9 files in other folders)
